--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>NexGen Robotics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/logo.png" />
-    <meta name="theme-color" content="#0BC4B9">
+    <link href="/assets/logo.png" rel="shortcut icon" type="image/x-icon"/>
+    <meta content="#0BC4B9" name="theme-color">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
@@ -19,145 +19,143 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md">
-        <img class="navbar-brand" src="../assets/banner-trans.png">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-md">
+    <img class="navbar-brand" src="../assets/banner-trans.png">
+    <button class="navbar-toggler" data-target="#navMenu" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon">
                 <a href="#">
                     <i class="fa fa-bars"></i>
                 </a>
             </span>
-        </button>
+    </button>
 
-        <!-- Navbar Content -->
-        <div class="collapse navbar-collapse" id="navMenu">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="team.html">Our Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sponsors.html">Sponsors</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="calendar.html">Calendar</a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-sm btn-yellow">
-                        <a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics">
-                            <i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a>
-                    </button>
-                </li>
-            </ul>
+    <!-- Navbar Content -->
+    <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="team.html">Our Team</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="sponsors.html">Sponsors</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="calendar.html">Calendar</a>
+            </li>
+            <li class="nav-item">
+                <button class="btn btn-sm btn-yellow" type="button">
+                    <a class="nav-link" href="https://www.gofundme.com/nexgen-robotics" target="_blank">
+                        <i aria-hidden="true" class="fa fa-heart pr-2"></i>Donate</a>
+                </button>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!-- Sponsor Images/Links -->
+<div class=" container-fluid body-dark">
+    <h1>Thank You to Our Sponsors!</h1>
+    <h3>If you or your organization are interested in supporting us, please contact us at
+        <br>
+        <b>business@dvhsrobotics.org</b>.</h3>
+    <hr>
+    <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+            <a href="https://www.apple.com">
+                <img class="img-fluid" src="../assets/sponsors/apple_logo.svg">
+            </a>
         </div>
-    </nav>
+        <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+            <a href="https://www.google.com">
+                <img class="img-fluid" src="../assets/sponsors/google_logo.svg">
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+            <a href="https://www.llnl.gov/">
+                <img class="img-fluid" src="../assets/sponsors/lawrence_logo.png">
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+            <a href="https://www.elks.org/lodges/home.cfm?lodgenumber=1474">
+                <img class="img-fluid" src="../assets/sponsors/elks_logo.png">
+            </a>
+        </div>
 
-    <!-- Sponsor Images/Links -->
-    <div class=" container-fluid body-dark">
-        <h1>Thank You to Our Sponsors!</h1>
-        <h3>If you or your organization are interested in supporting us, please contact us at
-            <br>
-            <b>business@dvhsrobotics.org</b>.</h3>
-        <hr>
+        <div class="col"></div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</div>
+
+<!-- Footer -->
+<div class="container-fluid dark-footer">
+    <footer class="page-footer dark-footer">
         <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
-                <a href="https://www.apple.com">
-                    <img class="img-fluid" src="../assets/sponsors/apple_logo.svg">
-                </a>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-heading">Team 6612
+                    <br>
+                    <h6 class="footer-subheading">NexGen Robotics</h6>
+                </h5>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
-                <a href="https://www.google.com">
-                    <img class="img-fluid" src="../assets/sponsors/google_logo.svg">
-                </a>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading">Team</h5>
+                <ul class="list-unstyled footer-list">
+                    <li>
+                        <a href="team.html#team2017">2017</a>
+                    </li>
+                    <li>
+                        <a href="team.html#team2018">2018</a>
+                    </li>
+                    <li>
+                        <a href="webdevteam.html">Web Dev Team</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
-                <a href="https://www.llnl.gov/">
-                    <img class="img-fluid" src="../assets/sponsors/lawrence_logo.png">
-                </a>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading">Contact
+                    <br>
+                    <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
+                </h5>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
-                <a href="https://www.elks.org/lodges/home.cfm?lodgenumber=1474">
-                    <img class="img-fluid" src="../assets/sponsors/elks_logo.png">
-                </a>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading">
+                    <a href="calendar.html">Calendar</a>
+                </h5>
+                <h5 class="">
+                    <a href="sponsors.html">Sponsors</a>
+                </h5>
             </div>
-
-            <div class="col"></div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </div>
-
-    <!-- Footer -->
-    <div class="container-fluid dark-footer">
-        <footer class="page-footer dark-footer">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-heading">Team 6612
-                        <br>
-                        <h6 class="footer-subheading">NexGen Robotics</h6>
-                    </h5>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading">Team</h5>
-                    <ul class="list-unstyled footer-list">
-                        <li>
-                            <a href="team.html#team2017">2017</a>
-                        </li>
-                        <li>
-                            <a href="team.html#team2018">2018</a>
-                        </li>
-                        <li>
-                            <a href="webdevteam.html">Web Dev Team</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading">Contact
-                        <br>
-                        <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
-                    </h5>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading">
-                        <a href="calendar.html">Calendar</a>
-                    </h5>
-                    <h5 class="">
-                        <a href="sponsors.html">Sponsors</a>
-                    </h5>
-                </div>
-            </div>
-        </footer>
-    </div>
+    </footer>
+</div>
 
 
-
-
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="../js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="../js/mdb.min.js"></script>
+<!-- SCRIPTS -->
+<!-- JQuery -->
+<script src="../js/jquery-3.3.1.min.js" type="text/javascript"></script>
+<!-- Bootstrap tooltips -->
+<script src="../js/popper.min.js" type="text/javascript"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="../js/bootstrap.min.js" type="text/javascript"></script>
+<!-- MDB core JavaScript -->
+<script src="../js/mdb.min.js" type="text/javascript"></script>
 </body>
 
 </html>
