--- a/pages/webdevteam.html
+++ b/pages/webdevteam.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>NexGen Robotics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/logo.png" />
-    <meta name="theme-color" content="#0BC4B9">
+    <link href="/assets/logo.png" rel="shortcut icon" type="image/x-icon"/>
+    <meta content="#0BC4B9" name="theme-color">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
@@ -19,105 +19,106 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md">
-        <img class="navbar-brand" src="../assets/banner-trans.png">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-md">
+    <img class="navbar-brand" src="../assets/banner-trans.png">
+    <button class="navbar-toggler" data-target="#navMenu" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon">
                 <a href="#">
                     <i class="fa fa-bars"></i>
                 </a>
             </span>
-        </button>
+    </button>
 
-        <!-- Navbar Content -->
-        <div class="collapse navbar-collapse" id="navMenu">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="team.html">Our Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sponsors.html">Sponsors</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="calendar.html">Calendar</a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-sm btn-yellow">
-                        <a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics">
-                            <i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a>
-                    </button>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container-fluid body-light">
-            <h3 style="color: black; text-align: left;">Aesthetically Challenged Developer</h3>
-            <h4 style="color: black;">Rameez Mughal</h4>
-            <h3 style="color: black; text-align: left;">Guy Who Actually Puts Website On The Internet</h3>
-            <h4 style="color: black;">Armand Agopian</h4>
-            <h3 style="color: black; text-align: left;">Senior Citizens</h3>
-            <h4 style="color: black;">Rohan Kapur</h4>
-            <h4 style="color: black;">Daniel Webster</h4>
-            <h1 style="color: black;">WIP</h1>
-            <!-- Yeah I used inline styling. deal with it -->
-            <h1>WIP</h1>
-            <h1>WIP</h1>
-            <h1>WIP</h1>
-            <h1>WIP</h1>
+    <!-- Navbar Content -->
+    <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="team.html">Our Team</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="sponsors.html">Sponsors</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="calendar.html">Calendar</a>
+            </li>
+            <li class="nav-item">
+                <button class="btn btn-sm btn-yellow" type="button">
+                    <a class="nav-link" href="https://www.gofundme.com/nexgen-robotics" target="_blank">
+                        <i aria-hidden="true" class="fa fa-heart pr-2"></i>Donate</a>
+                </button>
+            </li>
+        </ul>
     </div>
+</nav>
 
-    <!-- Footer -->
-    <div class="container-fluid dark-footer">
-        <footer class="page-footer dark-footer">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-heading">Team 6612
-                        <br>
-                        <h6 class="footer-subheading">NexGen Robotics</h6>
-                    </h5>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading">Team</h5>
-                    <ul class="list-unstyled footer-list">
-                        <li>
-                            <a href="team.html#team2017">2017</a>
-                        </li>
-                        <li>
-                            <a href="team.html#team2018">2018</a>
-                        </li>
-                        <li>
-                            <a href="webdevteam.html">Web Dev Team</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                        <h5 class="footer-list-heading">Contact <br> <h6 class="footer-subheading">business@dvhsrobotics.org</h6></h5>
-                    </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading"><a href="calendar.html">Calendar</a></h5>
-                    <h5 class=""><a href="sponsors.html">Sponsors</a></h5>
-                </div>
+<div class="container-fluid body-light">
+    <h3 style="color: black; text-align: left;">Aesthetically Challenged Developer</h3>
+    <h4 style="color: black;">Rameez Mughal</h4>
+    <h3 style="color: black; text-align: left;">Guy Who Actually Puts Website On The Internet</h3>
+    <h4 style="color: black;">Armand Agopian</h4>
+    <h3 style="color: black; text-align: left;">Senior Citizens</h3>
+    <h4 style="color: black;">Rohan Kapur</h4>
+    <h4 style="color: black;">Daniel Webster</h4>
+    <h1 style="color: black;">WIP</h1>
+    <!-- Yeah I used inline styling. deal with it -->
+    <h1>WIP</h1>
+    <h1>WIP</h1>
+    <h1>WIP</h1>
+    <h1>WIP</h1>
+</div>
+
+<!-- Footer -->
+<div class="container-fluid dark-footer">
+    <footer class="page-footer dark-footer">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-heading">Team 6612
+                    <br>
+                    <h6 class="footer-subheading">NexGen Robotics</h6>
+                </h5>
             </div>
-        </footer>
-    </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading">Team</h5>
+                <ul class="list-unstyled footer-list">
+                    <li>
+                        <a href="team.html#team2017">2017</a>
+                    </li>
+                    <li>
+                        <a href="team.html#team2018">2018</a>
+                    </li>
+                    <li>
+                        <a href="webdevteam.html">Web Dev Team</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading">Contact <br> <h6 class="footer-subheading">
+                    business@dvhsrobotics.org</h6></h5>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading"><a href="calendar.html">Calendar</a></h5>
+                <h5 class=""><a href="sponsors.html">Sponsors</a></h5>
+            </div>
+        </div>
+    </footer>
+</div>
 
-    <!-- Yes I know my class naming scheme and css are a mess -->
+<!-- Yes I know my class naming scheme and css are a mess -->
 
 
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="../js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="../js/mdb.min.js"></script>
+<!-- SCRIPTS -->
+<!-- JQuery -->
+<script src="../js/jquery-3.3.1.min.js" type="text/javascript"></script>
+<!-- Bootstrap tooltips -->
+<script src="../js/popper.min.js" type="text/javascript"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="../js/bootstrap.min.js" type="text/javascript"></script>
+<!-- MDB core JavaScript -->
+<script src="../js/mdb.min.js" type="text/javascript"></script>
 </body>
 
 </html>
