--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>NexGen Robotics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/logo.png" />
-    <meta name="theme-color" content="#0BC4B9">
+    <link href="/assets/logo.png" rel="shortcut icon" type="image/x-icon"/>
+    <meta content="#0BC4B9" name="theme-color">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
@@ -18,132 +18,131 @@
     <link href="../css/main.css" rel="stylesheet">
 
     <!-- GSuite Verification. DO NOT DELETE!!! -->
-    <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI">
+    <meta content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" name="google-site-verification">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md">
-        <img class="navbar-brand" src="../assets/banner-trans.png">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu">
+<nav class="navbar navbar-expand-md">
+    <img class="navbar-brand" src="../assets/banner-trans.png">
+    <button class="navbar-toggler" data-target="#navMenu" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon">
                 <a href="#">
                     <i class="fa fa-bars"></i>
                 </a>
             </span>
-        </button>
+    </button>
 
-        <!-- Navbar Content -->
-        <div class="collapse navbar-collapse" id="navMenu">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="team.html">Our Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sponsors.html">Sponsors</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="calendar.html">Calendar</a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-sm btn-yellow">
-                        <a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics">
-                            <i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a>
-                    </button>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <!-- Navbar Content -->
+    <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="team.html">Our Team</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="sponsors.html">Sponsors</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="calendar.html">Calendar</a>
+            </li>
+            <li class="nav-item">
+                <button class="btn btn-sm btn-yellow" type="button">
+                    <a class="nav-link" href="https://www.gofundme.com/nexgen-robotics" target="_blank">
+                        <i aria-hidden="true" class="fa fa-heart pr-2"></i>Donate</a>
+                </button>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-    <!-- Custom Calendar -->
-    <div class="container-fluid body-light calendar-container">
-        <br>
-        <div class="row">
-            <div class="col-sm-12">
-                <div id="calendarNavPrevButton">
-                    <button class="btn btn-primary btn-sm" onclick="prevWeek()">
-                        <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
-                    </button>
-                </div>
-                <h5 id="calendarDateRangeHeader">Loading ...</h5>
-                <div id="calendarNavNextButton">
-                    <button class="btn btn-primary btn-sm" onclick="nextWeek()">
-                        <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
-                    </button>
-                </div>
+<!-- Custom Calendar -->
+<div class="container-fluid body-light calendar-container">
+    <br>
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="calendarNavPrevButton">
+                <button class="btn btn-primary btn-sm" onclick="prevWeek()">
+                    <i aria-hidden="true" class="fa fa-chevron-left fa-2x"></i>
+                </button>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12" id="toggleCalendarView">
-                <button class="btn btn-primary btn-sm" onclick="monthView()">
-                    Month View
+            <h5 id="calendarDateRangeHeader">Loading ...</h5>
+            <div id="calendarNavNextButton">
+                <button class="btn btn-primary btn-sm" onclick="nextWeek()">
+                    <i aria-hidden="true" class="fa fa-chevron-right fa-2x"></i>
                 </button>
             </div>
         </div>
-        <div class="row" id="weeks">
+    </div>
+    <div class="row">
+        <div class="col-sm-12" id="toggleCalendarView">
+            <button class="btn btn-primary btn-sm" onclick="monthView()">
+                Month View
+            </button>
         </div>
-        <br>
-        <div id="calendar-bottom-padding"></div>
     </div>
+    <div class="row" id="weeks">
+    </div>
+    <br>
+    <div id="calendar-bottom-padding"></div>
+</div>
 
-    
 
-    <!-- Footer -->
-    <div class="container-fluid dark-footer">
-        <footer class="page-footer dark-footer">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-heading">Team 6612
-                        <br>
-                        <h6 class="footer-subheading">NexGen Robotics</h6>
-                    </h5>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading">Team</h5>
-                    <ul class="list-unstyled footer-list">
-                        <li>
-                            <a href="team.html#team2017">2017</a>
-                        </li>
-                        <li>
-                            <a href="team.html#team2018">2018</a>
-                        </li>
-                        <li>
-                            <a href="webdevteam.html">Web Dev Team</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading">Contact
-                        <br>
-                        <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
-                    </h5>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading">
-                        <a href="calendar.html">Calendar</a>
-                    </h5>
-                    <h5 class="">
-                        <a href="sponsors.html">Sponsors</a>
-                    </h5>
-                </div>
+<!-- Footer -->
+<div class="container-fluid dark-footer">
+    <footer class="page-footer dark-footer">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-heading">Team 6612
+                    <br>
+                    <h6 class="footer-subheading">NexGen Robotics</h6>
+                </h5>
             </div>
-        </footer>
-    </div>
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="../js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="../js/mdb.min.js"></script>
-    <!-- Google API JS -->
-    <script src="https://apis.google.com/js/api.js"></script>
-    <!-- Custom Calendar JS -->
-    <script src="../js/calendar.js"></script>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading">Team</h5>
+                <ul class="list-unstyled footer-list">
+                    <li>
+                        <a href="team.html#team2017">2017</a>
+                    </li>
+                    <li>
+                        <a href="team.html#team2018">2018</a>
+                    </li>
+                    <li>
+                        <a href="webdevteam.html">Web Dev Team</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading">Contact
+                    <br>
+                    <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
+                </h5>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <h5 class="footer-list-heading">
+                    <a href="calendar.html">Calendar</a>
+                </h5>
+                <h5 class="">
+                    <a href="sponsors.html">Sponsors</a>
+                </h5>
+            </div>
+        </div>
+    </footer>
+</div>
+<!-- SCRIPTS -->
+<!-- JQuery -->
+<script src="../js/jquery-3.3.1.min.js" type="text/javascript"></script>
+<!-- Bootstrap tooltips -->
+<script src="../js/popper.min.js" type="text/javascript"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="../js/bootstrap.min.js" type="text/javascript"></script>
+<!-- MDB core JavaScript -->
+<script src="../js/mdb.min.js" type="text/javascript"></script>
+<!-- Google API JS -->
+<script src="https://apis.google.com/js/api.js"></script>
+<!-- Custom Calendar JS -->
+<script src="../js/calendar.js"></script>
 </body>
 
 </html>
