--- a/pages/team.html
+++ b/pages/team.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>NexGen Robotics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/logo.png" />
-    <meta name="theme-color" content="#0BC4B9">
+    <link href="/assets/logo.png" rel="shortcut icon" type="image/x-icon"/>
+    <meta content="#0BC4B9" name="theme-color">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
@@ -19,211 +19,214 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md">
-        <img class="navbar-brand" src="../assets/banner-trans.png">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-md">
+    <img class="navbar-brand" src="../assets/banner-trans.png">
+    <button class="navbar-toggler" data-target="#navMenu" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon">
                 <a href="#">
                     <i class="fa fa-bars"></i>
                 </a>
             </span>
-        </button>
+    </button>
 
-        <!-- Navbar Content -->
-        <div class="collapse navbar-collapse" id="navMenu">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="team.html">Our Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sponsors.html">Sponsors</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="calendar.html">Calendar</a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-sm btn-yellow">
-                        <a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics">
-                            <i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a>
-                    </button>
-                </li>
-            </ul>
+    <!-- Navbar Content -->
+    <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="team.html">Our Team</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="sponsors.html">Sponsors</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="calendar.html">Calendar</a>
+            </li>
+            <li class="nav-item">
+                <button class="btn btn-sm btn-yellow" type="button">
+                    <a class="nav-link" href="https://www.gofundme.com/nexgen-robotics" target="_blank">
+                        <i aria-hidden="true" class="fa fa-heart pr-2"></i>Donate</a>
+                </button>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!-- Light Body -->
+<!-- Teams Through The Years -->
+<div class="container-fluid body-light">
+    <!-- Team 2018 -->
+    <div class="container" id="team2018">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1 class="h1-responsive card-title float-left header-dark">2018</h1>
+            </div>
         </div>
-    </nav>
-
-    <!-- Light Body -->
-    <!-- Teams Through The Years -->
-    <div class="container-fluid body-light">
-        <!-- Team 2018 -->
-        <div class="container" id="team2018">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h1 class="h1-responsive card-title float-left header-dark">2018</h1>
-                </div>
+        <div class="row">
+            <div class="col-sm-12 col-lg-6">
+                <img class="img-fluid team-image z-depth-2" src="../assets/2018/OurTeam.jpg">
             </div>
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <img class="img-fluid team-image z-depth-2" src="../assets/2018/OurTeam.jpg">
-                </div>
-                <div class="col-sm-12 col-lg-3">
-                    <img class="team-image-sm z-depth-2" src="../assets/2018/full-lift-resized.jpg" alt="Insert Robot Pic Here">
-                </div>
-                <div class="col-sm-12 col-lg-3">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <img class="team-image-sm z-depth-2" src="../assets/2018/2018robot_start-resized.jpg" alt="Insert Robot Pic Here">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <img class="team-image-sm z-depth-2" src="../assets/2018/fixing-bot-resized.png" alt="Insert Robot Pic Here">
-                        </div>
-                    </div>
-                </div>
+            <div class="col-sm-12 col-lg-3">
+                <img alt="Insert Robot Pic Here" class="team-image-sm z-depth-2"
+                     src="../assets/2018/full-lift-resized.jpg">
             </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <h3 class="header-dark">Our Team</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <table class="name-box">
-                        <tr>
-                            <td>Aaron Orellana</td>
-                            <td>Jamie Bulanon</td>
-                            <td>Adam Dong</td>
-                            <td>Joshua Duong</td>
-                        </tr>
-                        <tr>
-                            <td>Karan Ghura</td>
-                            <td>Andrew Higby</td>
-                            <td>Karlo Tambot</td>
-                            <td>Angi Vaid</td>
-                        </tr>
-                        <tr>
-                            <td>Mia Bulanon</td>
-                            <td>Chav Ngyuen</td>
-                            <td>Neha Prasad</td>
-                            <td>Daniel Webster</td>
-                        </tr>
-                        <tr>
-                            <td>Rameez Mughal</td>
-                            <td>Edgar Padilla Perez</td>
-                            <td>Ricardo Guzman</td>
-                            <td>Emily Gavrilenko</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <table class="name-box">
-                        <tr>
-                            <td>Amber Ganda</td>
-                            <td>Justin Williams</td>
-                            <td>Amy Gandolfo</td>
-                            <td>Tyler Lam</td>
-                        </tr>
-                        <tr>
-                            <td>Kyle Loyola</td>
-                            <td>Brandon Lee</td>
-                            <td>Leah Fernando</td>
-                            <td>Cauren Gannod</td>
-                        </tr>
-                        <tr>
-                            <td>Neil Perez</td>
-                            <td>Dennis Gavrilenko</td>
-                            <td>Oscar Nunez</td>
-                            <td>Dominic Lopez</td>
-                        </tr>
-                        <tr>
-                            <td>Rohan Kapur</td>
-                            <td>Fatima Fazil</td>
-                            <td>Steven Vasquez</td>
-                            <td>Jada Ross</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-
-            <!-- Team 2017 -->
-            <div class="container" id="team2017">
+            <div class="col-sm-12 col-lg-3">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 class="h1-responsive card-title float-left header-dark">2017</h1>
+                        <img alt="Insert Robot Pic Here" class="team-image-sm z-depth-2"
+                             src="../assets/2018/2018robot_start-resized.jpg">
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 col-lg-6">
-                        <img class="img-fluid team-image z-depth-2" src="../assets/2017/team2017-resized.png">
-                    </div>
-                    <div class="col-sm-12 col-lg-3">
-                        <img class="img-fluid team-image-sm z-depth-2" src="../assets/2017/robotonfield-resized.png" alt="Insert Robot Pic Here">
-                    </div>
-                    <div class="col-sm-12 col-lg-3">
-                        <img class="img-fluid team-image-sm z-depth-2" src="../assets/2017/robotclimbing-resized.png" alt="Insert Robot Pic Here">
+                    <div class="col-sm-12">
+                        <img alt="Insert Robot Pic Here" class="team-image-sm z-depth-2"
+                             src="../assets/2018/fixing-bot-resized.png">
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- Footer -->
-        <div class="container-fluid dark-footer">
-            <footer class="page-footer dark-footer">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-3">
-                        <h5 class="footer-heading">Team 6612
-                            <br>
-                            <h6 class="footer-subheading">NexGen Robotics</h6>
-                        </h5>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3">
-                        <h5 class="footer-list-heading">Team</h5>
-                        <ul class="list-unstyled footer-list">
-                            <li>
-                                <a href="team.html#team2017">2017</a>
-                            </li>
-                            <li>
-                                <a href="team.html#team2018">2018</a>
-                            </li>
-                            <li>
-                                <a href="webdevteam.html">Web Dev Team</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3">
-                        <h5 class="footer-list-heading">Contact
-                            <br>
-                            <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
-                        </h5>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3">
-                        <h5 class="footer-list-heading">
-                            <a href="calendar.html">Calendar</a>
-                        </h5>
-                        <h5 class="">
-                            <a href="sponsors.html">Sponsors</a>
-                        </h5>
-                    </div>
-                </div>
-            </footer>
+        <div class="row">
+            <div class="col-sm-12">
+                <h3 class="header-dark">Our Team</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-lg-6">
+                <table class="name-box">
+                    <tr>
+                        <td>Aaron Orellana</td>
+                        <td>Jamie Bulanon</td>
+                        <td>Adam Dong</td>
+                        <td>Joshua Duong</td>
+                    </tr>
+                    <tr>
+                        <td>Karan Ghura</td>
+                        <td>Andrew Higby</td>
+                        <td>Karlo Tambot</td>
+                        <td>Angi Vaid</td>
+                    </tr>
+                    <tr>
+                        <td>Mia Bulanon</td>
+                        <td>Chav Ngyuen</td>
+                        <td>Neha Prasad</td>
+                        <td>Daniel Webster</td>
+                    </tr>
+                    <tr>
+                        <td>Rameez Mughal</td>
+                        <td>Edgar Padilla Perez</td>
+                        <td>Ricardo Guzman</td>
+                        <td>Emily Gavrilenko</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-sm-12 col-lg-6">
+                <table class="name-box">
+                    <tr>
+                        <td>Amber Ganda</td>
+                        <td>Justin Williams</td>
+                        <td>Amy Gandolfo</td>
+                        <td>Tyler Lam</td>
+                    </tr>
+                    <tr>
+                        <td>Kyle Loyola</td>
+                        <td>Brandon Lee</td>
+                        <td>Leah Fernando</td>
+                        <td>Cauren Gannod</td>
+                    </tr>
+                    <tr>
+                        <td>Neil Perez</td>
+                        <td>Dennis Gavrilenko</td>
+                        <td>Oscar Nunez</td>
+                        <td>Dominic Lopez</td>
+                    </tr>
+                    <tr>
+                        <td>Rohan Kapur</td>
+                        <td>Fatima Fazil</td>
+                        <td>Steven Vasquez</td>
+                        <td>Jada Ross</td>
+                    </tr>
+                </table>
+            </div>
         </div>
 
+        <!-- Team 2017 -->
+        <div class="container" id="team2017">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="h1-responsive card-title float-left header-dark">2017</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
+                    <img class="img-fluid team-image z-depth-2" src="../assets/2017/team2017-resized.png">
+                </div>
+                <div class="col-sm-12 col-lg-3">
+                    <img alt="Insert Robot Pic Here" class="img-fluid team-image-sm z-depth-2"
+                         src="../assets/2017/robotonfield-resized.png">
+                </div>
+                <div class="col-sm-12 col-lg-3">
+                    <img alt="Insert Robot Pic Here" class="img-fluid team-image-sm z-depth-2"
+                         src="../assets/2017/robotclimbing-resized.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="container-fluid dark-footer">
+        <footer class="page-footer dark-footer">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-heading">Team 6612
+                        <br>
+                        <h6 class="footer-subheading">NexGen Robotics</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Team</h5>
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            <a href="team.html#team2017">2017</a>
+                        </li>
+                        <li>
+                            <a href="team.html#team2018">2018</a>
+                        </li>
+                        <li>
+                            <a href="webdevteam.html">Web Dev Team</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Contact
+                        <br>
+                        <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">
+                        <a href="calendar.html">Calendar</a>
+                    </h5>
+                    <h5 class="">
+                        <a href="sponsors.html">Sponsors</a>
+                    </h5>
+                </div>
+            </div>
+        </footer>
+    </div>
 
 
-
-        <!-- SCRIPTS -->
-        <!-- JQuery -->
-        <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-        <!-- Bootstrap tooltips -->
-        <script type="text/javascript" src="../js/popper.min.js"></script>
-        <!-- Bootstrap core JavaScript -->
-        <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-        <!-- MDB core JavaScript -->
-        <script type="text/javascript" src="../js/mdb.min.js"></script>
+    <!-- SCRIPTS -->
+    <!-- JQuery -->
+    <script src="../js/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <!-- Bootstrap tooltips -->
+    <script src="../js/popper.min.js" type="text/javascript"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- MDB core JavaScript -->
+    <script src="../js/mdb.min.js" type="text/javascript"></script>
 </body>
 
 </html>
