--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -6,8 +6,15 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <title>NexGen Robotics</title>
-    <link href="/assets/logo.png" rel="shortcut icon" type="image/x-icon" />
-    <meta content="#0BC4B9" name="theme-color">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/logo/favicon-16x16.png">
+    <link rel="manifest" href="/assets/logo/site.webmanifest">
+    <link rel="mask-icon" href="/assets/logo/safari-pinned-tab.svg" color="#0bc4b9">
+    <link rel="shortcut icon" href="/assets/logo/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="/assets/logo/browserconfig.xml">
+    <meta name="theme-color" content="#0bc4b9">
     <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
@@ -16,14 +23,11 @@
     <link href="../css/mdb.min.css" rel="stylesheet">
     <!-- Custom Styles -->
     <link href="../css/main.css" rel="stylesheet">
-
-    <!-- GSuite Verification. DO NOT DELETE!!! -->
-    <meta content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" name="google-site-verification">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md">
-        <img class="navbar-brand" src="../assets/banner-trans.png">
+        <img class="navbar-brand" src="../assets/logo/banner.png">
         <button class="navbar-toggler" data-target="#navMenu" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon">
                 <a href="#">
