--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -96,6 +96,7 @@
                         <li>
                             <a href="team.html#team2018">2018</a>
                         </li>
+                        <li><a href="team.html#team2019">2019</a></li>
                         <li>
                             <a href="webdevteam.html">Web Dev Team</a>
                         </li>
