--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -61,7 +61,7 @@
   </nav>
 
   <!-- Sponsor Images/Links -->
-  <div class=" container-fluid body-dark">
+  <div class="container-fluid body-dark">
     <h1>Thank You to Our Sponsors!</h1>
     <h3>
       If you or your organization are interested in supporting us, please
@@ -76,8 +76,8 @@
         </a>
       </div>
       <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
-        <a href="https://www.google.com">
-          <img class="img-fluid" src="../assets/sponsors/google_logo.svg" />
+        <a href="#">
+          <img class="img-fluid" src="../assets/sponsors/brin-wojcicki-foundation.png" />
         </a>
       </div>
       <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
@@ -86,10 +86,21 @@
         </a>
       </div>
       <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
-        <a href="https://www.elks.org/lodges/home.cfm?lodgenumber=1474">
-          <img class="img-fluid" src="../assets/sponsors/elks_logo.png" />
+        <a href="https://www.lockheedmartin.com/en-us/">
+          <img class="img-fluid" src="../assets/sponsors/lockheed-martin.png" />
         </a>
       </div>
+      <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+          <a href="http://amecipizzaandpasta.com/">
+            <img class="img-fluid" src="../assets/sponsors/ameci.png" />
+            <p class="container-fluid body-dark">A special thank you to Ameci's Pizza for sponsoring our event!</p>
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+            <a href="https://www.elks.org/lodges/home.cfm?lodgenumber=1474">
+              <img class="img-fluid" src="../assets/sponsors/elks_logo.png" />
+            </a>
+          </div>
 
       <div class="col"></div>
     </div>
@@ -126,6 +137,7 @@
           <ul class="list-unstyled footer-list">
             <li><a href="team.html#team2017">2017</a></li>
             <li><a href="team.html#team2018">2018</a></li>
+            <li><a href="team.html#team2019">2019</a></li>
             <li><a href="webdevteam.html">Web Dev Team</a></li>
           </ul>
         </div>
