--- a/pages/team.html
+++ b/pages/team.html
@@ -65,6 +65,29 @@
     <!-- Light Body -->
     <!-- Teams Through The Years -->
     <div class="container-fluid body-light">
+        <!-- Team 2019 -->
+        <div class="container" id="team2019">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h1 class="h1-responsive card-title float-left header-dark">2019</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-6">
+                        <img class="img-fluid team-image z-depth-2" src="../assets/2019/ourteam2019.jpg">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h3 class="header-dark">Our Team</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-6">
+                        <p>Member names coming soon!</p>
+                    </div>
+                </div>
+
         <!-- Team 2018 -->
         <div class="container" id="team2018">
             <div class="row">
@@ -174,6 +197,11 @@
                         <img alt="Insert Robot Pic Here" class="img-fluid team-image-sm z-depth-2" src="../assets/2017/robotclimbing-resized.png">
                     </div>
                 </div>
+                <div class="row">
+                        <div class="col-sm-12 col-lg-6">
+                            <p>Member names coming soon!</p>
+                        </div>
+                    </div>
             </div>
         </div>
 
@@ -196,6 +224,7 @@
                             <li>
                                 <a href="team.html#team2018">2018</a>
                             </li>
+                            <li><a href="team.html#team2019">2019</a></li>
                             <li>
                                 <a href="webdevteam.html">Web Dev Team</a>
                             </li>
